src/test/ui/const-generics/defaults/generic-expr-default-concrete.stderr
error[E0308]: mismatched types
  --> $DIR/generic-expr-default-concrete.rs:10:5
   |
LL |     Foo::<10, 12>
   |     ^^^^^^^^^^^^^ expected `11_usize`, found `12_usize`
   |
   = note: expected type `11_usize`
              found type `12_usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
